[project]
name = "fastapi-test-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "braintrust==0.0.191",
    "fastapi==0.104.1",
    "pydantic==2.4.2",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "uvicorn==0.24.0",
]
